force-app/main/default/objects/Analise_de_Equipamento__c/Analise_de_Equipamento__c.object-meta.xml
<CustomObject>
    <description>Esse é objeto é destinado para criação de analises de editais inteligentes feitas por assistentes de IA.</description>
    <label>Análise de Equipamentos</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Número da Análise</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises de Equipamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>