force-app/main/default/objects/Analise_de_Equipamento__c/fields/Analise__c.field-meta.xml
<CustomField>
    <fullName>Analise__c</fullName>
    <label>Análise</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>