force-app/main/default/objects/Analise_de_Equipamento__c/fields/Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Cobertura__c</fullName>
    <label>Cobertura</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>