force-app/main/default/objects/Analise_de_Equipamento__c/fields/Custo_da_Analise__c.field-meta.xml
<CustomField>
    <fullName>Custo_da_Analise__c</fullName>
    <label>Custo da Análise</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>