force-app/main/default/objects/Analise_de_Equipamento__c/fields/Nome_do_Agente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Agente__c</fullName>
    <label>Nome do Agente</label>
    <type>TextArea</type>
</CustomField>