force-app/main/default/objects/Analise_de_Equipamento__c/fields/Nome_do_Termo_de_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Termo_de_Referencia__c</fullName>
    <label>Nome do Termo de Referência</label>
    <type>TextArea</type>
</CustomField>