force-app/main/default/objects/Analise_de_Equipamento__c/fields/Nota_para_a_Analise__c.field-meta.xml
<CustomField>
    <fullName>Nota_para_a_Analise__c</fullName>
    <inlineHelpText>Nota de 0 à 100</inlineHelpText>
    <label>Nota para a Análise</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>