force-app/main/default/objects/Analise_de_Equipamento__c/fields/Numero_do_Item__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Item__c</fullName>
    <inlineHelpText>Número do item requirido no edital</inlineHelpText>
    <label>Número do Item</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>