force-app/main/default/objects/Analise_de_Equipamento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>em fila</fullName>
                <default>true</default>
                <label>em fila</label>
            </value>
            <value>
                <fullName>erro</fullName>
            </value>
            <value>
                <fullName>ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>