force-app/main/default/objects/Analise_de_Equipamento__c/fields/Tokens__c.field-meta.xml
<CustomField>
    <fullName>Tokens__c</fullName>
    <label>Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>